client/info-container: make sure properties dialog is always visible - does show up longer on taller screens

--- a/res/client/css/partials/info-card.scss
+++ b/res/client/css/partials/info-card.scss
@@ -10,6 +10,7 @@
     right: $graph-margin-right;
     top: 120px;
     width: 300px;
+    bottom: 160px;
 
     @include rz-box-sizing-border;
 }
